<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:id="@+id/Tentativas">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Vence"
        android:textColor="#ffa2171f"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="80dp"
        android:gravity="left" />

    <ImageView
        android:layout_width="73dp"
        android:layout_height="100dp"
        android:id="@+id/Ivencedor"
        android:padding="5dp"
        android:src="@drawable/lutador" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Tenta"
        android:layout_below="@+id/Vence"
        android:textColor="#ff1cc5a7"
        android:layout_margin="10dp"
        android:layout_centerInParent="true" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linhatabela"
        android:layout_below="@+id/Ivencedor"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preFinal"
            android:id="@+id/PreFinal"
            android:textStyle="bold"
            android:textSize="15dp" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linhatabela">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/No"
            android:id="@+id/No"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Yes"
            android:id="@+id/Yes"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>
    </TableRow>

</RelativeLayout>
